[package]
name = "ch02-unique-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
uuid7 = { version = "0.6.2", features = ["serde"] }