[package]
name = "ch03a-single-node-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
