[package]
name = "ch03d-efficient-broadcast-part-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.1", features = ["full"] }
